syntax = "proto3";
package comms;

message Message {
  uint64 to = 1;
  uint64 from = 2;
  bytes data = 3;

  string spawn = 4;
  uint64 spawn_address = 5;

  bool kill = 6;

  bool exiting = 7;
  int32 exit = 8;

  uint64 your_address = 9;
  uint64 parent_address = 10;
  // args
  // env vars
}

// function spawns another function
// function sends message to master with the function name in bytes and the "to"
// value set to 1 master returns bytes to the function with the address of the
// new function

// the runtime will buffer
